Fixed cover text on smaller screens

--- a/client/src/components/main/aboutPage/index.css
+++ b/client/src/components/main/aboutPage/index.css
@@ -134,3 +134,18 @@
 .skills-subtitle {
   margin-bottom: 0.5rem;
 }
+
+@media (max-width: 768px) {
+  .cover-text {
+    animation: fadeSlideIn 1.5s ease-out forwards;
+    opacity: 0;
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: left;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+}
